# triggersqs

./: .gitignore  Dockerfile  README.md  build.bat  pyproject.toml  run_api.py
entrypoints/: lambda_handler.py
triggersqs/: main.py  sqs_handler.py
