[tool.poetry]
name = "triggersqs"
version = "0.1.0"
description = ""
authors = ["vinybrasil <vinicyusbrasil1@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
mangum = "^0.16.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
